--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "commit": "git-cz"
   },
   "husky": {
     "hooks": {
@@ -18,17 +19,27 @@
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
-    "eslint": "8.31.0",
+    "autoprefixer": "^10.4.13",
+    "eslint": "^8.31.0",
     "eslint-config-next": "13.1.1",
     "next": "13.1.1",
+    "postcss": "^8.4.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.7.1",
+    "tailwindcss": "^3.2.4",
     "typescript": "4.9.4"
   },
   "devDependencies": {
     "commitizen": "^4.2.6",
     "cz-conventional-changelog": "3.3.0",
-    "husky": "^8.0.3"
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-react": "^7.31.11",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "husky": "^8.0.3",
+    "prettier": "^2.8.2",
+    "prettier-plugin-tailwindcss": "^0.2.1"
   },
   "config": {
     "commitizen": {
