fix: add prettier rule to fix clrf problem and removed button component outside folder (mistake)

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,8 +10,13 @@
   "rules": {
     "react-hooks/rules-of-hooks": "error",
     "react-hooks/exhaustive-deps": "warn",
-    "prettier/prettier": "error",
- 
+    "prettier/prettier": [
+      "error",
+      {
+        "endOfLine": "auto"
+      }
+    ],
+
     "react/react-in-jsx-scope": "off"
   }
 }
