--- a/package.json
+++ b/package.json
@@ -9,16 +9,16 @@
     "lint": "next lint",
     "commit": "git-cz"
   },
-  "husky": {
-    "hooks": {
-      "prepare-commit-msg": "exec < /dev/tty && npx cz --hook || true"
-    }
-  },
   "dependencies": {
+    "@headlessui/react": "^1.7.7",
     "@next/font": "13.1.1",
+    "@radix-ui/react-dialog": "^1.0.2",
+    "@radix-ui/react-dropdown-menu": "^2.0.1",
+    "@radix-ui/react-toggle-group": "^1.0.1",
     "@types/node": "18.11.18",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.10",
+    "@types/uuid": "^9.0.0",
     "autoprefixer": "^10.4.13",
     "eslint": "^8.31.0",
     "eslint-config-next": "13.1.1",
@@ -26,9 +26,15 @@
     "postcss": "^8.4.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.41.5",
     "react-icons": "^4.7.1",
+    "react-number-format": "^5.1.2",
     "tailwindcss": "^3.2.4",
-    "typescript": "4.9.4"
+    "tailwindcss-radix": "^2.6.2",
+    "typescript": "4.9.4",
+    "uuid": "^9.0.0",
+    "xlsx": "^0.18.5",
+    "zustand": "^4.3.1"
   },
   "devDependencies": {
     "commitizen": "^4.2.6",
@@ -37,7 +43,6 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.31.11",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "husky": "^8.0.3",
     "prettier": "^2.8.2",
     "prettier-plugin-tailwindcss": "^0.2.1"
   },
